--- a/mypage_profile2.html
+++ b/mypage_profile2.html
@@ -196,20 +196,30 @@
                                         <div class="reporter_card_logo">
                                             <img src="./images/reporter/logo_reporter.svg" alt="어린이과학동아&amp;어린이수학동아 기자단">
                                         </div>
-                                        <div class="reporter_card_thumb_area">
-                                            <div class="reporter_card_thumb">
-                                                <div class="img_box">
-                                                    <img src="./images/reporter/thumb.jpg" alt="" >
-                                                </div>
+                                        <div class="reporter_info">
+                                            <div class="reporter_info_top">
+                                                <strong class="name ff_godoB">송원재 기자님,</strong>
+                                                <p class="desc">정기구독 회원으로 인증하시면 <br> 기자증을 받을 수 있어요.</p>
+                                                <p class="caution">※ DS 스토어, 과학동아몰이 아닌 곳에서 정기구독을 하셨나요? <br> 하단 우측 메뉴에서 정기구독 인증을 진행해주세요.</p>
                                             </div>
+                                            <ul class="reporter_info_btns">
+                                                <li>
+                                                    <a href="" class="reporter_info_btn">
+                                                        <div class="ico_box"><img src="./images/ico/ico_benefit_subscribe.svg" alt=""></div>
+                                                        <strong class="txt_box">정기구독 신청</strong>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="" class="reporter_info_btn">
+                                                        <div class="ico_box"><img src="./images/ico/ico_benefit_certification.svg" alt=""></div>
+                                                        <strong class="txt_box">인증 방법 안내</strong>
+                                                    </a>
+                                                </li>
+                                            </ul>
                                         </div>
+
                                         <div class="reporter_card_id">
-                                            <strong class="name ff_godoB">장원영</strong>
                                             <span class="logo"><img src="./images/reporter/logo_ds.svg" alt=""></span>
-                                        </div>
-                                        <div class="reporter_card_info">
-                                            <p class="desc">위 사람은 어린이과학동아 기자단임을 증명함</p>
-                                            <p class="period">유효기간 : 2022.01.15~2022.12.31</p>
                                         </div>
                                     </div>
                                 </div>
