--- a/mypage_profile3.html
+++ b/mypage_profile3.html
@@ -196,20 +196,29 @@
                                         <div class="reporter_card_logo">
                                             <img src="./images/reporter/logo_reporter.svg" alt="어린이과학동아&amp;어린이수학동아 기자단">
                                         </div>
-                                        <div class="reporter_card_thumb_area">
-                                            <div class="reporter_card_thumb">
-                                                <div class="img_box">
-                                                    <img src="./images/reporter/thumb.jpg" alt="" >
-                                                </div>
+                                        <div class="reporter_info">
+                                            <div class="reporter_info_top">
+                                                <strong class="name ff_godoB">송원재 기자님,</strong>
+                                                <p class="desc">기자단에 가입하여 다양한 혜택을 경험해 보세요. <br> 어과수 기자단은 호기심 많고 예리한 우리 친구들을 기다리고 있어요!</p>
                                             </div>
+                                            <ul class="reporter_info_btns">
+                                                <li>
+                                                    <a href="" class="reporter_info_btn">
+                                                        <div class="ico_box"><img src="./images/ico/ico_benefit_signin.svg" alt=""></div>
+                                                        <strong class="txt_box">기자단 가입</strong>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="" class="reporter_info_btn">
+                                                        <div class="ico_box"><img src="./images/ico/ico_benefit_reporter.svg" alt=""></div>
+                                                        <strong class="txt_box">기자단이란?</strong>
+                                                    </a>
+                                                </li>
+                                            </ul>
                                         </div>
+
                                         <div class="reporter_card_id">
-                                            <strong class="name ff_godoB">장원영</strong>
                                             <span class="logo"><img src="./images/reporter/logo_ds.svg" alt=""></span>
-                                        </div>
-                                        <div class="reporter_card_info">
-                                            <p class="desc">위 사람은 어린이과학동아 기자단임을 증명함</p>
-                                            <p class="period">유효기간 : 2022.01.15~2022.12.31</p>
                                         </div>
                                     </div>
                                 </div>
