--- a/mypage_admin_note.html
+++ b/mypage_admin_note.html
@@ -176,114 +176,92 @@
                 <div class="inner">
                     <div class="sub_tit">
                         <i><img src="./images/common/ico_mypage.svg" alt=""></i>
-                        <h2>팝콘플래닛 가입</h2>
+                        <h2>마이페이지</h2>
                     </div>
-                    <div class="sub_sec_wrap">
-                        <div class="sec sec_b">
-                            <div class="sub_sec ty_bd mp_greeting">
-                                <P class="mp_greeting_txt">팝콘플래닛 설명을 넣어줍니다!</P><br><br>
-                                <img src="./images/common/pp_img.png" alt="팝콘플래닛 POOPCORN PLANET">
+                    <div class="sub_nav_wrap">
+                        <ul class="sub_nav">
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link">마이 프로필</a></li>
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link">메세지</a></li>
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link">내가 쓴 글</a></li>
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link on">관리자 쪽지</a></li>
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link">알림 설정</a></li>
+                        </ul>
+                        <img src="./images/common/sub_nav_img.svg" alt="" class="sub_nav_img">
+                    </div>
+                    <div class="sub_sec ty_bd has_nav m_bb_n sub_sec_list">
+                        <div class="sub_sec_inner">
+                            <div class="pp_list_top">
+                                <div class="pp_list_top_count">전체 <b class="fc_red">1542</b><span class="blind">개</span></div>
                             </div>
-                        </div>
-                        <div class="sec sec_s">
-                            <div class="sub_sec ty_bd mp_join m_bb_n">
-                                <div class="reporter_card_wrap">
-                                    <div class="reporter_card taC">
-                                        <div class="reporter_card_thumb_area">
-                                            <div class="reporter_card_thumb">
-                                                <div class="img_box">
-                                                    <img src="./images/reporter/thumb.jpg" alt="" >
-                                                </div>
-                                            </div>
-                                            <div class="add_img_set">
-                                                <button type="button" class="btn_mid l_red">사진 등록</button>
-                                                <p>꼭 내 얼굴이 나온 사진으로 <br> 올려 주세요. <span class="fc_red">필수</span></p>
-                                            </div>
+                            <ul class="pp_list ty_free">
+                                <li class="pp_list_nocont">관리자 쪽지가 없습니다.</li>
+                                <li class="pp_list_item">
+                                    <a href="" class="pp_list_link">
+                                        <i class="pp_list_ico"><img src="./images/ico/ico_note.svg" alt=""></i>
+                                        <div class="pp_list_txt ">
+                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
                                         </div>
-                                        <div class="reporter_card_id">
-                                            <strong class="name ff_godoB">
-                                                <!--
-                                                    구글 : login_GO,
-                                                    애플 : login_AP,
-                                                    카톡 : login_KT,
-                                                    네이버 : login_NA
-                                                -->
-                                                <span class="log_ico_sns"><img src="https://img.dongascience.com/news2019/images/login_GO.png" alt="" class=""></span>장원영
-                                            </strong>
-                                            <p class="email">changsik@donga.com</p>
+                                        <span class="pp_list_date">2022.07.06</span>
+                                    </a>
+                                </li>
+                                <li class="pp_list_item">
+                                    <a href="" class="pp_list_link">
+                                        <i class="pp_list_ico"><img src="./images/ico/ico_note.svg" alt=""></i>
+                                        <div class="pp_list_txt ellipsis1">
+                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="mp_join_form">
-                                    <div class="form_sec">
-                                        <label for="" class="form_label">학교/학년 <em class="tag_required">필수</em></label>
-                                        <div class="form_cont">
-                                            <input type="text" class="input_ty1" placeholder="학교 이름">
-                                            <select name="" id="" class="select_ty1 ty_big">
-                                                <option value="" selected>선택</option>
-                                                <option value="">1학년</option>
-                                                <option value="">2학년</option>
-                                                <option value="">3학년</option>
-                                                <option value="">4학년</option>
-                                                <option value="">5학년</option>
-                                                <option value="">6학년</option>
-                                            </select>
+                                        <span class="pp_list_date">2022.07.06</span>
+                                    </a>
+                                </li>
+                                <li class="pp_list_item">
+                                    <a href="" class="pp_list_link">
+                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
+                                        <div class="pp_list_txt ellipsis1">
+                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
                                         </div>
-                                    </div>
-                                    <div class="form_sec">
-                                        <label for="" class="form_label">생년월일/성별 <em class="tag_required">필수</em></label>
-                                        <div class="form_cont">
-                                            <input type="text" class="input_ty1" placeholder="ex)20120425">
-                                            <select name="" id="" class="select_ty1 ty_big">
-                                                <option value="" selected>선택</option>
-                                                <option value="">남</option>
-                                                <option value="">여</option>
-                                                <option value="">비공개</option>
-                                            </select>
+                                        <span class="pp_list_date">2022.07.06</span>
+                                    </a>
+                                </li>
+                                <li class="pp_list_item">
+                                    <a href="" class="pp_list_link">
+                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
+                                        <div class="pp_list_txt ellipsis1">
+                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
                                         </div>
-                                    </div>
-                                    <div class="form_sec">
-                                        <label for="" class="form_label">본인 휴대전화번호</label>
-                                        <div class="form_cont">
-                                            <input type="tel" class="input_ty1" placeholder="ex)01012345678">
-                                            <button class="btn_mid l_red btn_certify">인증번호 전송</button>
+                                        <span class="pp_list_date">2022.07.06</span>
+                                    </a>
+                                </li>
+                                <li class="pp_list_item">
+                                    <a href="" class="pp_list_link">
+                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
+                                        <div class="pp_list_txt ellipsis1">
+                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
                                         </div>
-                                        <div class="form_cont">
-                                            <input type="tel" class="input_ty1" placeholder="인증번호 4자리 입력">
-                                            <button class="btn_mid red btn_certify">인증 완료</button>
+                                        <span class="pp_list_date">2022.07.06</span>
+                                    </a>
+                                </li>
+                                <li class="pp_list_item">
+                                    <a href="" class="pp_list_link">
+                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
+                                        <div class="pp_list_txt ellipsis1">
+                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
                                         </div>
-                                    </div>
-                                    <div class="form_sec">
-                                        <label for="" class="form_label">보호자 이름/관계 <em class="tag_required">필수</em></label>
-                                        <div class="form_cont">
-                                            <input type="text" class="input_ty1" placeholder="보호자 이름">
-                                            <select name="" id="" class="select_ty1 ty_big">
-                                                <option value="" selected>선택</option>
-                                                <option value="">부</option>
-                                                <option value="">모</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form_sec">
-                                        <label for="" class="form_label">보호자 휴대전화번호 <em class="tag_required">필수</em></label>
-                                        <div class="form_cont">
-                                            <input type="tel" class="input_ty1" placeholder="ex)01012345678">
-                                            <button class="btn_mid l_red btn_certify">인증번호 전송</button>
-                                        </div>
-                                        <div class="form_cont">
-                                            <input type="tel" class="input_ty1" placeholder="인증번호 4자리 입력">
-                                            <button class="btn_mid red btn_certify">인증 완료</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mp_join_bot">
-                                    <label class="chk_agree no_drag cursor_pointer">
-                                        <input type="checkbox">회원이 홈페이지 내 게시한 글이 동아사이언스 매체에 실리는 것에 동의합니다.
-                                    </label>
-                                    <div class="btn_box ty_bot2 taC">
-                                        <input type="submit" value="저장" class="btn_big red">
-                                    </div>
-                                </div>
+                                        <span class="pp_list_date">2022.07.06</span>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="paging">
+                                <button class="paging_btn first"><span class="blind">처음으로</span></button>
+                                <button class="paging_btn prev"><span class="blind">이전</span></button>
+                                <ul class="paging_list">
+                                    <li><button class="paging_btn current">1</button></li>
+                                    <li><button class="paging_btn ">2</button></li>
+                                    <li><button class="paging_btn ">3</button></li>
+                                    <li><button class="paging_btn ">4</button></li>
+                                    <li><button class="paging_btn ">5</button></li>
+                                </ul>
+                                <button class="paging_btn next"><span class="blind">다음</span></button>
+                                <button class="paging_btn last"><span class="blind">마지막으로</span></button>
                             </div>
                         </div>
                     </div>
