--- a/index_nav1.html
+++ b/index_nav1.html
@@ -8,6 +8,9 @@
     <!--스타일 공통-->
     <link rel="stylesheet" href="./common/css/common.css">
 
+    <!-- 팝콘플래닛 공통 -->
+    <link rel="stylesheet" href="./common/css/pp_common.css">
+
     <!--js 공통-->
     <script type="text/javascript" src="./common/js/jquery.min.js"></script>
     <script type="text/javascript" src="./common/js/jquery-ui.min.js"></script>
