--- a/mypage_join.html
+++ b/mypage_join.html
@@ -255,6 +255,9 @@
                                             <input type="tel" class="input_ty1" placeholder="인증번호 4자리 입력">
                                             <button class="btn_mid red btn_certify">인증 완료</button>
                                         </div>
+                                        <div class="form_cont">
+                                            <p class="form_msg fc_green">인증이 완료 됐습니다.</p>
+                                        </div>
                                     </div>
                                     <div class="form_sec">
                                         <label for="" class="form_label">보호자 이름/관계 <em class="tag_required">필수</em></label>
@@ -276,6 +279,9 @@
                                         <div class="form_cont">
                                             <input type="tel" class="input_ty1" placeholder="인증번호 4자리 입력">
                                             <button class="btn_mid red btn_certify">인증 완료</button>
+                                        </div>
+                                        <div class="form_cont">
+                                            <p class="form_msg fc_green">인증이 완료 됐습니다.</p>
                                         </div>
                                     </div>
                                 </div>
