--- a/mypage_modify.html
+++ b/mypage_modify.html
@@ -302,6 +302,9 @@
                                                 <input type="tel" class="input_ty1" placeholder="인증번호 4자리 입력">
                                                 <button class="btn_mid red btn_certify">인증 완료</button>
                                             </div>
+                                            <div class="form_cont">
+                                                <p class="form_msg fc_green">인증이 완료 됐습니다.</p>
+                                            </div>
                                         </div>
 
                                     </div>
@@ -329,6 +332,9 @@
                                             <div class="form_cont">
                                                 <input type="tel" class="input_ty1" placeholder="인증번호 4자리 입력">
                                                 <button class="btn_mid red btn_certify">인증 완료</button>
+                                            </div>
+                                            <div class="form_cont">
+                                                <p class="form_msg fc_green">인증이 완료 됐습니다.</p>
                                             </div>
                                         </div>
 
