--- a/mypage_alert_setting.html
+++ b/mypage_alert_setting.html
@@ -186,117 +186,71 @@
                             <li class="sub_nav_item"><a href="" class="sub_nav_link">마이 프로필</a></li>
                             <li class="sub_nav_item"><a href="" class="sub_nav_link">메세지</a></li>
                             <li class="sub_nav_item"><a href="" class="sub_nav_link">내가 쓴 글</a></li>
-                            <li class="sub_nav_item"><a href="" class="sub_nav_link on">관리자 쪽지</a></li>
-                            <li class="sub_nav_item"><a href="" class="sub_nav_link">알림 설정</a></li>
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link">관리자 쪽지</a></li>
+                            <li class="sub_nav_item"><a href="" class="sub_nav_link on">알림 설정</a></li>
                         </ul>
                         <img src="./images/common/sub_nav_img.svg" alt="" class="sub_nav_img">
                     </div>
-                    <div class="sub_sec ty_bd has_nav m_bb_n sub_sec_list">
+                    <div class="sub_sec ty_bd alert_setting has_nav m_bb_n">
                         <div class="sub_sec_inner">
-                            <div class="pp_list_top">
-                                <div class="pp_list_top_count">전체 <b class="fc_red">1542</b><span class="blind">개</span></div>
-                            </div>
-                            <ul class="pp_list ty_free">
-                                <li class="pp_list_nocont">관리자 쪽지가 없습니다.</li>
-                                <li class="pp_list_item">
-                                    <a href="" class="pp_list_link" onclick="open_popup(this); return false;" data-popup="popup_msg">
-                                        <i class="pp_list_ico"><img src="./images/ico/ico_note.svg" alt=""></i>
-                                        <div class="pp_list_txt ">
-                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
-                                        </div>
-                                        <span class="pp_list_date">2022.07.06</span>
-                                    </a>
+                            <ul class="alert_setting_list">
+                                <li class="alert_setting_item">
+                                    <div class="txt_box">
+                                        <strong class="tit">댓글 알림</strong>
+                                        <p class="txt">내 게시물에 댓글이 달리면 알림 메세지를 받습니다.</p>
+                                    </div>
+                                    <label class="chk_toggle">
+                                        <input type="checkbox" class="hidden_chk">
+                                        <span class="chk_toggle_box">
+                                            <em class="txt_on">ON</em>
+                                            <i class="chk_toggle_ico"></i>
+                                        </span>
+                                    </label>
                                 </li>
-                                <li class="pp_list_item">
-                                    <a href="" class="pp_list_link">
-                                        <i class="pp_list_ico"><img src="./images/ico/ico_note.svg" alt=""></i>
-                                        <div class="pp_list_txt ellipsis1">
-                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
-                                        </div>
-                                        <span class="pp_list_date">2022.07.06</span>
-                                    </a>
+                                <li class="alert_setting_item">
+                                    <div class="txt_box">
+                                        <strong class="tit">추천 알림</strong>
+                                        <p class="txt">내 게시물에 "추천" 이 달리면 알림 메시지를 받습니다.</p>
+                                    </div>
+                                    <label class="chk_toggle">
+                                        <input type="checkbox" class="hidden_chk">
+                                        <span class="chk_toggle_box">
+                                            <em class="txt_on">ON</em>
+                                            <i class="chk_toggle_ico"></i>
+                                        </span>
+                                    </label>
                                 </li>
-                                <li class="pp_list_item">
-                                    <a href="" class="pp_list_link">
-                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
-                                        <div class="pp_list_txt ellipsis1">
-                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
-                                        </div>
-                                        <span class="pp_list_date">2022.07.06</span>
-                                    </a>
+                                <li class="alert_setting_item">
+                                    <div class="txt_box">
+                                        <strong class="tit">기자단 기사 알림</strong>
+                                        <p class="txt">내가 쓴 기사가 등록되면 알림 메시지를 받습니다.</p>
+                                    </div>
+                                    <label class="chk_toggle">
+                                        <input type="checkbox" class="hidden_chk">
+                                        <span class="chk_toggle_box">
+                                            <em class="txt_on">ON</em>
+                                            <i class="chk_toggle_ico"></i>
+                                        </span>
+                                    </label>
                                 </li>
-                                <li class="pp_list_item">
-                                    <a href="" class="pp_list_link">
-                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
-                                        <div class="pp_list_txt ellipsis1">
-                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
-                                        </div>
-                                        <span class="pp_list_date">2022.07.06</span>
-                                    </a>
-                                </li>
-                                <li class="pp_list_item">
-                                    <a href="" class="pp_list_link">
-                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
-                                        <div class="pp_list_txt ellipsis1">
-                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
-                                        </div>
-                                        <span class="pp_list_date">2022.07.06</span>
-                                    </a>
-                                </li>
-                                <li class="pp_list_item">
-                                    <a href="" class="pp_list_link">
-                                        <i class="pp_list_ico"><img src="./images/ico/ico_note_read.svg" alt=""></i>
-                                        <div class="pp_list_txt ellipsis1">
-                                            <p class="tit ellipsis1">미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다 미안하다 이거 보여주려고 어그로 끌었다</p>
-                                        </div>
-                                        <span class="pp_list_date">2022.07.06</span>
-                                    </a>
+                                <li class="alert_setting_item">
+                                    <div class="txt_box">
+                                        <strong class="tit">공지 알림</strong>
+                                        <p class="txt">새로운 공지가 등록되면 푸시 메시지를 받습니다.</p>
+                                        <p class="txt fc_red">공지 알림 푸시 메시지는 앱에서만 동작합니다.</p>
+                                    </div>
+                                    <label class="chk_toggle">
+                                        <input type="checkbox" class="hidden_chk">
+                                        <span class="chk_toggle_box">
+                                            <em class="txt_on">ON</em>
+                                            <i class="chk_toggle_ico"></i>
+                                        </span>
+                                    </label>
                                 </li>
                             </ul>
-                            <div class="paging">
-                                <button class="paging_btn first"><span class="blind">처음으로</span></button>
-                                <button class="paging_btn prev"><span class="blind">이전</span></button>
-                                <ul class="paging_list">
-                                    <li><button class="paging_btn current">1</button></li>
-                                    <li><button class="paging_btn ">2</button></li>
-                                    <li><button class="paging_btn ">3</button></li>
-                                    <li><button class="paging_btn ">4</button></li>
-                                    <li><button class="paging_btn ">5</button></li>
-                                </ul>
-                                <button class="paging_btn next"><span class="blind">다음</span></button>
-                                <button class="paging_btn last"><span class="blind">마지막으로</span></button>
-                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="layer_popup popup_msg on">
-                    <div class="layer_popup_inner">
-                        <div class="layer_popup_cont">
-                            <button class="close_popup" onclick="close_popup(this);"><span class="blind">팝업닫기</span></button>
-                            <div class="popup_tit">
-                                <strong class="tit">관리자가 보낸 쪽지</strong>
-                                <span class="date">2022.07.11</span>
-                            </div>
-                            <div class="popup_msg">
-                                회원님께서는 글쓰기 규정을 위반하여 한 달
-                                동안 글쓰기가 정지되었습니다. <br><br>
-
-                                규정을 3회 위반시 회원이 탈퇴 될 수 있음을
-                                알려드립니다.
-                                회원님께서는 글쓰기 규정을 위반하여 한 달
-                                동안 글쓰기가 정지되었습니다. <br><br>
-
-                                규정을 3회 위반시 회원이 탈퇴 될 수 있음을
-                                알려드립니다.
-                            </div>
-                            <div class="popup_btns taC">
-                                <button class="btn_mid red" onclick="close_popup(this);">닫기</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
             <footer id="footer" class="footer">
                 <ul class="footer_menu">
@@ -318,7 +272,5 @@
             </footer>
         </div>
     </div>
-
-
 </body>
 </html>
